--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <div id="TopHeader" class="row container-fuild">
         <a class="visible-md visible-lg hidden-xs" href="index.html">
           <img
-            src="/image/companyLogo/SGCLogo.png"
+            src="image/companyLogo/SGCLogo.png"
             class="img-fluid"
             alt="Responsive image"
             id="logo-img"
           />
           <img
-            src="/image/companyLogo/SGC.png"
+            src="image/companyLogo/SGC.png"
             class="img-fluid"
             alt="Responsive image"
             id="logo-img"
