--- a/snippet/aboutus.html
+++ b/snippet/aboutus.html
@@ -50,7 +50,7 @@
 
       <div id="aboutusImage1">
         <img
-        src="/image/common/Point_8_1.jpg"
+        src="image/common/Point_8_1.jpg"
         class="img-fluid"
         alt="Responsive image"
         
