--- a/snippet/index-snippet.html
+++ b/snippet/index-snippet.html
@@ -10,21 +10,21 @@
   </ol>
   <div id="mySlideShow" class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/image/slideShow/rs1.png" class="d-block w-100" alt="..." />
+      <img src="image/slideShow/rs1.png" class="d-block w-100" alt="..." />
     </div>
     <div class="carousel-item">
-      <img src="/image/slideShow/rs2.png" class="d-block w-100" alt="..." />
+      <img src="image/slideShow/rs2.png" class="d-block w-100" alt="..." />
     </div>
     <div class="carousel-item">
-      <img src="/image/slideShow/rs3.jpg" class="d-block w-100" alt="..." />
-    </div>
-
-    <div class="carousel-item">
-      <img src="/image/slideShow/rs4.jpg" class="d-block w-100" alt="..." />
+      <img src="image/slideShow/rs3.jpg" class="d-block w-100" alt="..." />
     </div>
 
     <div class="carousel-item">
-      <img src="/image/slideShow/rs5.jpg" class="d-block w-100" alt="..." />
+      <img src="image/slideShow/rs4.jpg" class="d-block w-100" alt="..." />
+    </div>
+
+    <div class="carousel-item">
+      <img src="image/slideShow/rs5.jpg" class="d-block w-100" alt="..." />
     </div>
   </div>
   <a
