--- a/snippet/index-footer.html
+++ b/snippet/index-footer.html
@@ -5,12 +5,12 @@
       <h5>Saih Al Rawl Gas Company LLC</h5>
       <div id="footer-image">
         <img
-          src="/image/companyLogo/SGCLogo.png"
+          src="image/companyLogo/SGCLogo.png"
           class="img-fluid"
           alt="Responsive image"
         />
         <img
-          src="/image/companyLogo/SGC.png"
+          src="image/companyLogo/SGC.png"
           class="img-fluid"
           alt="Responsive image"
         />
