--- a/snippet/index-snippet2.html
+++ b/snippet/index-snippet2.html
@@ -4,14 +4,14 @@
   </div>
   <div id="section_02" class="col-md-4 user_indexPart2">
     <img
-      src="/image/Section2/Hompage Miraah Final.jpg"
+      src="image/Section2/Hompage Miraah Final.jpg"
       class="img-fluid"
       alt="Responsive image"
     />
   </div>
   <div id="section_03" class="col-md-2 user_indexPart2">
     <img
-      src="/image/Section2/estidama_Final.jpg"
+      src="image/Section2/estidama_Final.jpg"
       class="img-fluid"
       alt="Responsive image"
     />
