--- a/snippet/index-snippet3.html
+++ b/snippet/index-snippet3.html
@@ -3,36 +3,36 @@
     <h5>HSE</h5>
     <p>required inputs from client</p>
     <p>Under Construction</p>
-    <img src="/image/common/p2.jpg" class="img-fluid" alt="Responsive image" />
+    <img src="image/common/p2.jpg" class="img-fluid" alt="Responsive image" />
   </div>
   <div id="section_02" class="col-md-2 usr_indexPart3">
     <h5>In Country Value</h5>
     <p>required inputs from client</p>
     <p>Under Construction</p>
-    <img src="/image/common/p3.jpg" class="img-fluid" alt="Responsive image" />
+    <img src="image/common/p3.jpg" class="img-fluid" alt="Responsive image" />
   </div>
   <div id="section_03" class="col-md-2 usr_indexPart3">
     <h5>Expertise</h5>
     <p>required inputs from client</p>
     <p>Under Construction</p>
-    <img src="/image/common/p4.jpg" class="img-fluid" alt="Responsive image" />
+    <img src="image/common/p4.jpg" class="img-fluid" alt="Responsive image" />
   </div>
   <div id="section_04" class="col-md-2 usr_indexPart3">
     <h5>In the Spotlight</h5>
     <p>required inputs from client</p>
     <p>Under Construction</p>
-    <img src="/image/common/p5.jpg" class="img-fluid" alt="Responsive image" />
+    <img src="image/common/p5.jpg" class="img-fluid" alt="Responsive image" />
   </div>
   <div id="section_05" class="col-md-2 usr_indexPart3">
     <h5>Social Investment</h5>
     <p>required inputs from client</p>
     <p>Under Construction</p>
-    <img src="/image/common/p6.jpg" class="img-fluid" alt="Responsive image" />
+    <img src="image/common/p6.jpg" class="img-fluid" alt="Responsive image" />
   </div>
   <div id="section_06" class="col-md-2 usr_indexPart3">
     <h5>Current Projects</h5>
     <p>required inputs from client</p>
     <p>Under Construction</p>
-    <img src="/image/common/p7.jpg" class="img-fluid" alt="Responsive image" />
+    <img src="image/common/p7.jpg" class="img-fluid" alt="Responsive image" />
   </div>
 </div>
